--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,35 @@
 accelerate==0.30.0
-transformers==4.36.2
-diffusers[torch]==0.25.0
+transformers==4.38.0
+diffusers[torch]
 ftfy==6.1.1
 # albumentations==1.3.0
 opencv-python==4.7.0.68
 einops==0.7.0
 pytorch-lightning==1.9.0
-bitsandbytes==0.43.0
-prodigyopt==1.0
-lion-pytorch==0.0.6
-schedulefree==1.2.5
+lycoris_lora
+prodigyopt
+dadaptation
+lion-pytorch
+schedulefree
 tensorboard
+scipy==1.11.4
 safetensors==0.4.2
+omegaconf==2.3.0
 # gradio==3.16.2
 altair==4.2.2
 easygui==0.98.3
 toml==0.10.2
 voluptuous==0.13.1
 huggingface-hub==0.20.1
+aiofiles==23.2.1
 # for Image utils
 imagesize==1.4.1
 # for BLIP captioning
 # requests==2.28.2
 # timm==0.6.12
-# fairscale==0.4.13
+fairscale==0.4.13
+invisible-watermark==0.2.0
+
 # for WD14 captioning (tensorflow)
 # tensorflow==2.10.1
 # for WD14 captioning (onnx)
@@ -38,6 +44,6 @@ imagesize==1.4.1
 # open clip for SDXL
 # open-clip-torch==2.20.0
 # For logging
-rich==13.7.0
+rich>=13.7.1
 # for kohya_ss library
 -e .
